# mir4scope-backend

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.sql  docker-compose.yml  fly.toml
dump_trade_items/: Cargo.toml  list.json
dump_trade_items/src/: main.rs
src/: cli.rs  db.rs  main.rs  nft.rs  utils.rs
src/dump_trade_items/: main.rs
src/responses/: assets.rs  building.rs  codex.rs  equip_item.rs  holy_stuff.rs  inventory.rs  item_detail.rs  magic_orb.rs  magic_stone.rs  mod.rs  mystical_piece.rs  nft.rs  potentials.rs  skills.rs  spirits.rs  stats.rs  succession.rs  summary.rs  ticket.rs  training.rs
