[package]
name = "mir4scope-backend"
version = "0.1.0"
edition = "2021"
default-run = "mir4scope-backend"

[[bin]]
name = "dump_trade"
path = "src/dump_trade_items/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres"] }
dotenvy = "0.15.7"
serde = "1.0.197"
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
anyhow = "1.0.81"
reqwest-middleware = "0.3.0"
reqwest-retry = "0.5.0"
reqwest = "0.12.4"
regex = "1.10.4"
clap = { version = "4.5.4", features = ["derive"] }

